<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="My Profile"
            app:titleTextColor="@android:color/white"
            app:titleTextAppearance="@style/ToolbarTextAppearance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/img_profile"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tb_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/aladin"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/img_profile"
            app:layout_constraintStart_toStartOf="@id/img_profile"
            app:layout_constraintEnd_toEndOf="@id/img_profile"/>

    <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="0.7dp"
            android:background="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username"/>

    <LinearLayout
            android:id="@+id/track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/track_label"
                android:fontFamily="@font/aladin"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="22sp"
                android:text="@string/track"
                android:fontFamily="@font/aladin"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/track"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/country_label"
                android:fontFamily="@font/aladin"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="22sp"
                android:text="@string/country"
                android:fontFamily="@font/aladin"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/email_label"
                android:fontFamily="@font/aladin"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="22sp"
                android:text="@string/email"
                android:fontFamily="@font/aladin"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/phone_number_label"
                android:fontFamily="@font/aladin"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="22sp"
                android:text="@string/phone_number"
                android:fontFamily="@font/aladin"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/slack_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/slack_username_label"
                android:fontFamily="@font/aladin"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="22sp"
                android:text="@string/slack_user"
                android:fontFamily="@font/aladin"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>